--- a/project.config.json
+++ b/project.config.json
@@ -1,11 +1,5 @@
 {
-  "appid": "wxcacf273f5e7f2997",
   "compileType": "miniprogram",
-  "libVersion": "2.25.2",
-  "packOptions": {
-    "ignore": [],
-    "include": []
-  },
   "setting": {
     "coverView": true,
     "es6": true,
@@ -40,5 +34,11 @@
     "tabIndent": "insertSpaces",
     "tabSize": 2
   },
-  "description": "项目配置文件，详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html"
+  "description": "项目配置文件，详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
+  "libVersion": "2.25.2",
+  "packOptions": {
+    "ignore": [],
+    "include": []
+  },
+  "appid": "wxcacf273f5e7f2997"
 }
